policies/dx/vpol/BlockK8sInitiatorAppCAPA.yaml
[[- if and .Values.provider .Values.vpol.enabled ]]
[[- if  eq .Values.provider.kind "capa"  ]]
---
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: block-k8s-initiator-app-deployment-capa
  annotations:
    policies.kyverno.io/title: Block K8s initiator app deployment on CAPA
    policies.kyverno.io/category: Developer Experience
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: App
    policies.kyverno.io/minversion: 1.16.0
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: ["application.giantswarm.io"]
      apiVersions: ["*"]
      operations: [CREATE, UPDATE]
      resources: [apps]
  evaluation:
    background:
      enabled: true
    admission:
      enabled: true
  failurePolicy: Fail
  validationActions: [Deny]
  validations:
    - expression: >-
        object.spec.name != "k8s-initiator-app"
      message: K8s initiator app is not supported on CAPA.
