policies/dx/vpol/EnforceGSRegistries.yaml
[[- if .Values.vpol.enabled ]]
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/title: Restrict Image Registries
    policies.kyverno.io/category: Developer Experience
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.16.0
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Images from unknown, public registries can be of dubious quality and may not be
      scanned and secured, representing a high degree of risk. Requiring use of known, approved
      registries helps reduce threat exposure by ensuring image pulls only come from them. This
      sample validates that container images only originate from Giant Swarm trusted registries.
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: ['']
      apiVersions: [v1]
      operations: [CREATE, UPDATE]
      resources: [pods]
  evaluation:
    background:
      enabled: true
    admission:
      enabled: true
  validationActions: [Audit]
  validations:
  - expression: >-
      object.spec.containers.all(c, 
        c.image.startsWith("quay.io/giantswarm/") || 
        c.image.startsWith("docker.io/giantswarm/") ||
        c.image.startsWith("giantswarm/") ||
        c.image.startsWith("giantswarm.azurecr.io/giantswarm/") ||
        c.image.startsWith("giantswarm-registry.cn-shanghai.cr.aliyuncs.com/giantswarm/") ||
        c.image.startsWith("gsoci.azurecr.io/giantswarm/") ||
        c.image.startsWith("gsociprivate.azurecr.io/giantswarm/")
      )
    message: >-
      Images must come from a trusted Giant Swarm registry.
[[- end ]]
