policies/dx/vpol/RestrictExternalSecretsServiceAccounts.yaml
[[- if .Values.vpol.enabled ]]
[[- if (.Capabilities.APIVersions.Has "external-secrets.io/v1beta1/SecretStore") ]]
---
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: restrict-external-secrets-secret-store-service-accounts
  annotations:
    policies.kyverno.io/title: Restrict External Secrets Secret Store Service Accounts
    policies.kyverno.io/category: Developer Experience
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.16.0
    policies.kyverno.io/subject: SecretStore
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: ["external-secrets.io"]
      apiVersions: ["v1beta1"]
      operations: [CREATE, UPDATE]
      resources: [secretstores]
  matchConditions:
  - name: kubernetes-provider
    expression: >-
      has(object.spec.provider.kubernetes) &&
      has(object.spec.provider.kubernetes.auth) &&
      has(object.spec.provider.kubernetes.auth.serviceAccount)
  evaluation:
    background:
      enabled: true
    admission:
      enabled: true
  failurePolicy: Fail
  validationActions: [Deny]
  validations:
  - expression: >-
      object.spec.provider.kubernetes.auth.serviceAccount.namespace.contains("giantswarm") == false
    message: SecretStore cannot use giantswarm namespaced service accounts for kubernetes provider.
---
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: restrict-external-secrets-cluster-secret-store-service-accounts
  annotations:
    policies.kyverno.io/title: Restrict External Secrets Cluster Secret Store Service Accounts
    policies.kyverno.io/category: Developer Experience
    policies.kyverno.io/severity: medium
    policies.kyverno.io/minversion: 1.16.0
    policies.kyverno.io/subject: ClusterSecretStore
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: ["external-secrets.io"]
      apiVersions: ["v1beta1"]
      operations: [CREATE, UPDATE]
      resources: [clustersecretstores]
  matchConditions:
  - name: kubernetes-provider
    expression: >-
      has(object.spec.provider.kubernetes) &&
      has(object.spec.provider.kubernetes.auth) &&
      has(object.spec.provider.kubernetes.auth.serviceAccount)
  evaluation:
    background:
      enabled: true
    admission:
      enabled: true
  failurePolicy: Fail
  validationActions: [Deny]
  validations:
  - expression: >-
      object.spec.provider.kubernetes.auth.serviceAccount.namespace.contains("giantswarm") == false
    message: ClusterSecretStore cannot use giantswarm namespaced service accounts for kubernetes provider.
